Added start game button to Simon game screen

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -21,7 +21,8 @@
             <br>
             <h1 class="simon-logo">Simon</h1>
             <br>
-            <a href="simonMenu.html" class="simon-game-exit-btn">Exit Game</a>
+            <a href="simonMenu.html" class="simon-game-btn">Start Game</a>
+            <a href="simonMenu.html" class="simon-game-btn">Exit Game</a>
         </div>
     </div> 
   </body>
