--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -21,9 +21,20 @@
             <br>
             <h1 class="simon-logo">Simon</h1>
             <br>
-            <a href="simonMenu.html" class="simon-game-btn">Start Game</a>
-            <a href="simonMenu.html" class="simon-game-btn">Exit Game</a>
+            <button class="simon-game-btn" id="startGameBtn">Start Game</button>
+            <button class="simon-game-btn" id="simonExitBtn">Exit Game</button>
         </div>
-    </div> 
+    </div>
+    <div class="win-msg" id = win-msg-id>
+      <div winning-text>You Win!</div>
+      <a href="simon.html" class="end-screen-btn" id="nextLevelBtn">Next Level</a>
+      <a href="simonMenu.html" class="end-screen-btn" id="exitLevelBtn">Exit Game</a>
+    </div>
+
+    <div class="gameover-msg" id = gameover-msg-id>
+      <div losing-text>You Lose!</div>
+      <a href="simon.html" class="end-screen-btn" id="startOverBtn">Start New Game</a>
+      <a href="simonMenu.html" class="end-screen-btn" id="exitLevelBtn">Exit Game</a>
+    </div>
   </body>
 </html>
