mashed games together to form a semi-cohesive project

--- a/web-pages/8PuzzleMenu.html
+++ b/web-pages/8PuzzleMenu.html
@@ -5,6 +5,8 @@
     <link rel='stylesheet' href='../simon-style.css' />
   </head>
   <body>
-    <h1>8 PUZZLE GAME WILL GO HERE</h1>
+    <h1>
+      <a href="8Puzzle.html">Click here to go to the 8 Puzzle game.</a>
+    </h1>
   </body>
 </html>
