Basic highlight function working

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <div class="board-container">
-        <h1 class="center underline">Level 1</h1>
+        <h1 class="center underline" id="levelHeader">Level 1</h1>
         <div class="center">
-            <div class="quadrant TL-quadrant"></div>
-            <div class="quadrant TR-quadrant"></div>
+            <div class="quadrant TL-quadrant" id="topLeft"></div>
+            <div class="quadrant TR-quadrant" id="topRight"></div>
         </div> 
         <div class="center">
-            <div class="quadrant BL-quadrant"></div>
-            <div class="quadrant BR-quadrant"></div>
+            <div class="quadrant BL-quadrant" id="botLeft"></div>
+            <div class="quadrant BR-quadrant" id="botRight"></div>
         </div>
         <div class="center">
             <span class="dot"></span>
