Refactored code to be OOP

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -9,12 +9,12 @@
     <div class="board-container">
         <h1 class="center underline" id="levelHeader">Level 1</h1>
         <div class="center">
-            <div class="quadrant TL-quadrant" id="topLeft"></div>
-            <div class="quadrant TR-quadrant" id="topRight"></div>
+            <div class="quadrant TL-quadrant" id="topLeft" onclick="quadrantClicked(event.currentTarget)"></div>
+            <div class="quadrant TR-quadrant" id="topRight" onclick="quadrantClicked(event.currentTarget)"></div>
         </div> 
         <div class="center">
-            <div class="quadrant BL-quadrant" id="botLeft"></div>
-            <div class="quadrant BR-quadrant" id="botRight"></div>
+            <div class="quadrant BL-quadrant" id="botLeft" onclick="quadrantClicked(event.currentTarget)"></div>
+            <div class="quadrant BR-quadrant" id="botRight" onclick="quadrantClicked(event.currentTarget)"></div>
         </div>
         <div class="center">
             <span class="dot"></span>
