Basic game functionality is working with proper win/game over screens

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -27,7 +27,7 @@
     </div>
     <div class="win-msg" id = win-msg-id>
       <div winning-text>You Win!</div>
-      <a href="simon.html" class="end-screen-btn" id="nextLevelBtn">Next Level</a>
+      <span class="end-screen-btn" id="nextLevelBtn">Next Level</span>
       <a href="simonMenu.html" class="end-screen-btn" id="exitLevelBtn">Exit Game</a>
     </div>
 
