Game fully functional, but the difficulty options are bugged

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -22,7 +22,7 @@
             <h1 class="simon-logo">Simon</h1>
             <br>
             <button class="simon-game-btn" id="startGameBtn">Start Game</button>
-            <button class="simon-game-btn" id="simonExitBtn">Exit Game</button>
+            <a href="./simonMenu.html" class="simon-game-btn" id="simonExitBtn">Exit Game</a>
         </div>
     </div>
     <div class="win-msg" id = win-msg-id>
