--- a/web-pages/simonDifficulty.html
+++ b/web-pages/simonDifficulty.html
@@ -3,16 +3,17 @@
   <head>
     <title>Difficulty</title>
     <link rel='stylesheet' href='../simon-style.css' />
+    <script type="module" src="./simon-difficulty.js" defer></script>
   </head>
   <body>
     <div class="menu-container">
         <div class="center">
             <h1 class="menu-header">Difficulty</h1>
-            <a href="" class="link-btn">Easy</a>
+            <a href="" class="link-btn" id='easy-diff'>Easy</a>
             <br><br>
-            <a href="" class="link-btn">Moderate</a>
+            <a href="" class="link-btn" id='moderate-diff'>Moderate</a>
             <br><br>
-            <a href="" class="link-btn">Hard</a>
+            <a href="" class="link-btn" id='hard-diff'>Hard</a>
             <br><br>
             <a href="simonMenu.html" class="link-btn">Back</a>
         </div>
