Changed win screen button to an actual button object and delted a bunch of commented out code

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -27,7 +27,7 @@
     </div>
     <div class="win-msg" id = win-msg-id>
       <div winning-text>You Win!</div>
-      <span class="end-screen-btn" id="nextLevelBtn">Next Level</span>
+      <button class="end-screen-btn" id="nextLevelBtn">Next Level</button>
       <a href="simonMenu.html" class="end-screen-btn" id="exitLevelBtn">Exit Game</a>
     </div>
 
