cleaned up code of various console.outs and added some comments

--- a/web-pages/simonDifficulty.html
+++ b/web-pages/simonDifficulty.html
@@ -3,17 +3,17 @@
   <head>
     <title>Difficulty</title>
     <link rel='stylesheet' href='../simon-style.css' />
-    <script type="module" src="./simon-difficulty.js" defer></script>
+    <script src="../simon-difficulty.js" defer></script>
   </head>
   <body>
     <div class="menu-container">
         <div class="center">
             <h1 class="menu-header">Difficulty</h1>
-            <a href="" class="link-btn" id='easy-diff'>Easy</a>
+            <button class="link-btn" id='easy-diff'>Easy</button>
             <br><br>
-            <a href="" class="link-btn" id='moderate-diff'>Moderate</a>
+            <button class="link-btn" id='moderate-diff'>Moderate</button>
             <br><br>
-            <a href="" class="link-btn" id='hard-diff'>Hard</a>
+            <button class="link-btn" id='hard-diff'>Hard</button>
             <br><br>
             <a href="simonMenu.html" class="link-btn">Back</a>
         </div>
