--- a/web-pages/8Puzzle.html
+++ b/web-pages/8Puzzle.html
@@ -23,7 +23,8 @@
         
         <span id="move">Move: 100</span>
         <span id="time">Time: 100</span>
-        <button> Play </button>
+        <span id= "playButtonSpan"> <button id= "playButton"> Play </button> </span>
+        <span id= "pauseButtonSpan"> <button id="pauseButton"> Pause </button> </span>
       </div>
     </div>
     <h1 class="message">You win!</h1>
