Game demo menu has working DFA

--- a/web-pages/simonMenu.html
+++ b/web-pages/simonMenu.html
@@ -12,7 +12,7 @@
             <br><br>
             <a href="simonDifficulty.html" class="link-btn">Difficulty</a>
             <br><br>
-            <a href="gameDemoMenu.html" class="link-btn">Exit Game</a>
+            <a href="gameDemoMenu.html" class="link-btn">Back</a>
         </div>
     </div>
   </body>
