--- a/web-pages/gameDemoMenu.html
+++ b/web-pages/gameDemoMenu.html
@@ -12,8 +12,218 @@
             <br><br>
             <a href="8PuzzleMenu.html" class="link-btn">8 Puzzle</a>
             <br><br>
-            <a href="../index.html" class="link-btn">Exit Game Demos</a>
+            <a href="../index.html" class="link-btn">Exit</a>
+            <br><br>
+            <p>
+              <label for="dfa-input">Simulated Voice Input</label>
+              <input type="text" id="dfa-input" size="50" />
+              <button id="dfa-submit">Send</button>
+            </p>
+            <p>
+              <label for="dfa-output-info">Additional Information</label>
+              <input type="text" id="dfa-output-info" disabled size="50" />
+            </p>
         </div>
     </div>
+
+    <!-- DFA -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../dfa-observer.js"></script>
+    <script type="text/javascript">
+      let schema = {
+        "0": {
+          "transitions": {
+            "select": 1
+          },
+          "state": "restart"
+        },
+        "1": {
+          "transitions": {
+            "simon": 2,
+            "puzzle": 3,
+            "exit": 4,
+            "start": 5,
+            "difficulty": 6,
+            "easy": 7,
+            "moderate": 8,
+            "hard": 9,
+            "back": 10,
+            "cancel": 0
+          }
+        },
+        "2": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "simon"
+          }
+        },
+        "3": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "puzzle"
+          }
+        },
+        "4": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "exit"
+          }
+        },
+        "5": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "start"
+          }
+        },
+        "6": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "difficulty"
+          }
+        },
+        "7": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "easy"
+          }
+        },
+        "8": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "moderate"
+          }
+        },
+        "9": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "hard"
+          }
+        },
+        "10": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "back"
+          }
+        }
+      }
+
+      function onError(error) {
+        console.error(error);
+        $('#dfa-output-info').val(error);
+        $('#dfa-output-info').css('color', '#CC0000');
+      }
+
+      function onChangedState(msg) {
+        $('#dfa-output-info').val(msg);
+        $('#dfa-output-info').css('color', '#000000');
+      }
+
+      function onTerminalState(register) {
+        console.log('!!! on terminal state !!!');
+        for(const [key, value] of register.entries())
+          console.log(`!!!!!!!!!! ${key} = ${value}`);
+
+        // if(!register.has("action"))
+        //   console.error(`[OBSERVER] Could not pick out the action.`);
+        // else if(!register.has("position"))
+        //   console.error(`[OBSERVER] Could not pick out the position.`);
+        // else {
+        //   let position = register.get("position").toLowerCase();
+        //   let idx = 0;
+
+        //   if(position == "1" || position == "one") idx = 1;
+        //   else if(position == "2" || position == "two") idx = 2;
+        //   else if(position == "3" || position == "three") idx = 3;
+        //   else if(position == "4" || position == "four") idx = 4;
+        //   else if(position == "5" || position == "five") idx = 5;
+
+        //   if(idx > 0 && idx <= 5) {
+        //     let action = register.get("action");
+        //     if(action == "place") {
+        //       if(register.has("word")) {
+        //         let word = register.get("word");
+        //         $(`#dfa-output-${idx}`).val(word);
+        //         $('#dfa-output-info').val(`Placed ${word} in slot ${idx}!`);
+        //         $('#dfa-output-info').css('color', '#00CC00');
+        //       } else onError("Oracle could not pick out the word.");
+        //     } else if(action == "delete") {
+        //       $(`#dfa-output-${idx}`).val('');
+        //       $('#dfa-output-info').val(`Cleared slot ${idx}!`);
+        //       $('#dfa-output-info').css('color', '#009900');
+        //     } else onError("Oracle picked up an invalid action.");
+        //   } else onError("Observer picked up an invalid position.");
+        // }
+
+        // My code
+        if(!register.has("select"))
+          console.error(`[OBSERVER] Could not pick out the select command.`);
+        else {
+          let select = register.get("select")
+
+          switch(select) {
+            case "simon":
+              location.href = 'simonMenu.html'
+              break
+            case "puzzle":
+              location.href = '8PuzzleMenu.html'
+              break
+            case "exit":
+              // This needs to revert back to the Dashboard
+              location.href = '../index.html'
+              break
+            case "start":
+              location.href = 'simonMenu.html'
+              break
+            case "difficulty":
+              location.href = 'simonMenu.html'
+              break
+            case "easy":
+              location.href = 'simonMenu.html'
+              break
+            case "moderate":
+              location.href = 'simonMenu.html'
+              break
+            case "hard":
+              location.href = 'simonMenu.html'
+              break
+            case "back":
+              location.href = 'simonMenu.html'
+              break
+            case "cancel":
+              location.href = 'simonMenu.html'
+              break
+            default:
+                onError("Observer did not pick a valid command")
+          }
+        }
+      };
+
+      let dfa = new DFA(schema, onChangedState, onTerminalState, onError);
+
+      let pushLine = function() {
+        dfa.pushLine($('#dfa-input').val());
+        $('#dfa-input').val('');
+        $('#dfa-input').focus();
+      };
+
+      $(document).ready(function() {
+        $('#dfa-submit').on('click', pushLine);
+        $('#dfa-input').on('keydown', function(e) {
+          if(e.which == 13) {
+            pushLine();
+            return false;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
