--- a/web-pages/simonDifficulty.html
+++ b/web-pages/simonDifficulty.html
@@ -16,7 +16,128 @@
             <button class="link-btn" id='hard-diff'>Hard</button>
             <br><br>
             <a href="simonMenu.html" class="link-btn">Back</a>
+            <br><br>
+            <p>
+              <label for="dfa-input">Simulated Voice Input</label>
+              <input type="text" id="dfa-input" size="50" />
+              <button id="dfa-submit">Send</button>
+            </p>
+            <p>
+              <label for="dfa-output-info">Additional Information</label>
+              <input type="text" id="dfa-output-info" disabled size="50" />
+            </p>
         </div>
     </div>
+
+    <!-- DFA -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../dfa-observer.js"></script>
+    <script type="text/javascript">
+      let schema = {
+        "0": {
+          "transitions": {
+            "select": 1
+          },
+          "state": "restart"
+        },
+        "1": {
+          "transitions": {
+            "easy": 2,
+            "moderate": 3,
+            "hard": 4,
+            "back": 5,
+            "cancel": 0
+          }
+        },
+        "2": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "easy"
+          }
+        },
+        "3": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "moderate"
+          }
+        },
+        "4": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "hard"
+          }
+        },
+        "5": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "back"
+          }
+        }
+      }
+
+      function onError(error) {
+        console.error(error);
+        $('#dfa-output-info').val(error);
+        $('#dfa-output-info').css('color', '#CC0000');
+      }
+
+      function onChangedState(msg) {
+        $('#dfa-output-info').val(msg);
+        $('#dfa-output-info').css('color', '#000000');
+      }
+
+      function onTerminalState(register) {
+        console.log('!!! on terminal state !!!');
+        for(const [key, value] of register.entries())
+          console.log(`!!!!!!!!!! ${key} = ${value}`);
+
+        if(!register.has("select"))
+          console.error(`[OBSERVER] Could not pick out the select command.`);
+        else {
+          let select = register.get("select")
+
+          switch(select) {
+            case "easy":
+              localStorage.setItem('difficultyCookie', 'easy')
+              location.href = 'simonMenu.html'
+              break
+            case "moderate":
+              localStorage.setItem('difficultyCookie', 'moderate')
+              location.href = 'simonMenu.html'
+              break
+            case "hard":
+              localStorage.setItem('difficultyCookie', 'hard')
+              location.href = 'simonMenu.html'
+            case "back":
+              location.href = 'simonMenu.html'
+              break
+            default:
+              onError("Observer did not pick a valid command")
+          }
+        }
+      };
+
+      let dfa = new DFA(schema, onChangedState, onTerminalState, onError);
+
+      let pushLine = function() {
+        dfa.pushLine($('#dfa-input').val());
+        $('#dfa-input').val('');
+        $('#dfa-input').focus();
+      };
+
+      $(document).ready(function() {
+        $('#dfa-submit').on('click', pushLine);
+        $('#dfa-input').on('keydown', function(e) {
+          if(e.which == 13) {
+            pushLine();
+            return false;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
