can now select colors directly in the DFA without first using the keyword 'select'

--- a/web-pages/simon.html
+++ b/web-pages/simon.html
@@ -79,7 +79,11 @@
     let schema = {
       "0": {
         "transitions": {
-          "select": 1
+          "select": 1,
+          "red": 3,
+          "green": 4,
+          "yellow": 5,
+          "blue": 6
         },
         "state": "restart"
       },
