--- a/web-pages/8PuzzleMenu.html
+++ b/web-pages/8PuzzleMenu.html
@@ -5,8 +5,106 @@
     <link rel='stylesheet' href='../simon-style.css' />
   </head>
   <body>
-    <h1>
-      <a href="8Puzzle.html">Click here to go to the 8 Puzzle game.</a>
-    </h1>
+    <div class="menu-container">
+        <div class="center">
+            <h1 class="menu-header">8 Puzzle</h1>
+            <a href="8Puzzle.html" class="link-btn">Start Game</a>
+            <br><br>
+            <a href="gameDemoMenu.html" class="link-btn">Back</a>
+            <br><br>
+            <p>
+              <label for="dfa-input">Simulated Voice Input</label>
+              <input type="text" id="dfa-input" size="50" />
+              <button id="dfa-submit">Send</button>
+            </p>
+        </div>
+    </div>
+
+    <!-- DFA -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../dfa-observer.js"></script>
+    <script type="text/javascript">
+      let schema = {
+        "0": {
+          "transitions": {
+            "select": 1
+          },
+          "state": "restart"
+        },
+        "1": {
+          "transitions": {
+            "start": 2,
+            "back": 3,
+            "cancel": 0
+          }
+        },
+        "2": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "start"
+          }
+        },
+        "3": {
+          "state": "done",
+          "set": {
+            "key": "select",
+            "value": "back"
+          }
+        }
+      }
+
+      function onError(error) {
+        console.error(error);
+        $('#dfa-output-info').val(error);
+        $('#dfa-output-info').css('color', '#CC0000');
+      }
+
+      function onChangedState(msg) {
+        $('#dfa-output-info').val(msg);
+        $('#dfa-output-info').css('color', '#000000');
+      }
+
+      function onTerminalState(register) {
+        console.log('!!! on terminal state !!!');
+        for(const [key, value] of register.entries())
+          console.log(`!!!!!!!!!! ${key} = ${value}`);
+
+        if(!register.has("select"))
+          console.error(`[OBSERVER] Could not pick out the select command.`);
+        else {
+          let select = register.get("select")
+
+          switch(select) {
+            case "start":
+              location.href = '8Puzzle.html'
+              break
+            case "back":
+              location.href = 'gameDemoMenu.html'
+              break
+            default:
+              onError("Observer did not pick a valid command")
+          }
+        }
+      };
+
+      let dfa = new DFA(schema, onChangedState, onTerminalState, onError);
+
+      let pushLine = function() {
+        dfa.pushLine($('#dfa-input').val());
+        $('#dfa-input').val('');
+        $('#dfa-input').focus();
+      };
+
+      $(document).ready(function() {
+        $('#dfa-submit').on('click', pushLine);
+        $('#dfa-input').on('keydown', function(e) {
+          if(e.which == 13) {
+            pushLine();
+            return false;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
