added line to index.html to auto-redirect to the main game menu

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>(Fake) V2C Dashbaord</title>
     <link rel='stylesheet' href='simon-style.css'/>
+    <meta http-equiv="refresh" content="0; url=./web-pages/gameDemoMenu.html" />
   </head>
   <body>
     <h1>(Fake) V2C Dashbaord</h1>
